Fix Separator between the TabbedMenu not to jump 1px after first postback (RM-1594)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14947 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMenu.css
+++ b/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMenu.css
@@ -26,6 +26,11 @@ td.tabbedSubMenuCell
   border-bottom: solid 1px #083779;
 }
 
+td.tabbedSubMenuCell ul
+{
+  overflow: hidden;
+}
+
 td.tabbedMenuStatusCell
 {
   background-color: White;
